--- a/test/fixtures/bike_racks.yml
+++ b/test/fixtures/bike_racks.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  address: MyString
-  int: 
+  address: MyText
+  quantity: 1
 
 two:
-  address: MyString
-  int: 
+  address: MyText
+  quantity: 1
