--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#   name: MyString
-#   email: MyString
-#   password_digest: MyString
-
-# two:
-#   name: MyString
-#   email: MyString
-#   password_digest: MyString
+miguelito:
+  name: Miguelito Lopez
+  email: miguelito@example.com
+  password_digest: <%= User.digest('password') %>
